--- a/project/pom.xml
+++ b/project/pom.xml
@@ -59,6 +59,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--图片压缩工具-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
