--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     url: jdbc:mysql://localhost:3306/sipc115?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  http:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
 
 server:
   port: 8082
