--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 20185584
     url: jdbc:mysql://localhost:3306/sipc115?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
-  http:
+
+  servlet:
     multipart:
-      max-file-size: 10MB
       max-request-size: 100MB
+      max-file-size: 10MB
 
 server:
   port: 8082
