--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 20185584
-    url: jdbc:mysql://localhost:3306/sipc115?characterEncoding=utf-8&useSSL=false
+    #password: 20185584
+    #url: jdbc:mysql://localhost:3306/sipc115?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 
@@ -19,8 +19,14 @@ spring:
       max-request-size: 100MB
       max-file-size: 10MB
 
+  profiles:
+    active: prod
+
 server:
-  port: 8082
+  #port: 80
   servlet:
     context-path: /
 
+logging:
+  file:
+    path: ./logs
